# SynDraw

./: .gitignore  README.md  setup.sh
SynDraw/: .gitignore  CMakeLists.txt  doxygen.conf
SynDraw/src/: FileDialog.mm  LineViewer.cpp  LineViewer.h  batch_main.cpp  interactive_main.cpp  main.cpp  normal_main.cpp  shadow_main.cpp
SynDraw/src/Chainer/: ContourChain.cpp  ContourChain.h  ContourChainer.cpp  ContourChainer.h
SynDraw/src/Common/: Drawable.h  MeshDrawing.cpp  MeshDrawing.h  MeshObject.cpp  MeshObject.h  ViewCamera.cpp  ViewCamera.h
SynDraw/src/ContourExtractor/: BoundariesExtractor.cpp  BoundariesExtractor.h  ContourExtractor.cpp  ContourExtractor.h  CreasesExtractor.cpp  CreasesExtractor.h  CrossStructures.h  CrossValueContoursExtractor.cpp  CrossValueContoursExtractor.h  DemarcatingCurvesExtractor.cpp  DemarcatingCurvesExtractor.h  OcclusionContoursExtractor.cpp  OcclusionContoursExtractor.h  RidgesExtractor.cpp  RidgesExtractor.h  SharpFeaturesExtractor.cpp  SharpFeaturesExtractor.h  SmoothOcclusionContoursExtractor.cpp  SmoothOcclusionContoursExtractor.h  SuggestiveContoursExtractor.cpp  SuggestiveContoursExtractor.h  ValleysExtractor.cpp  ValleysExtractor.h
SynDraw/src/Lib/: simple_svg.hpp
SynDraw/src/Tools/: BSP.cpp  BSP.h  ContourFilter.cpp  ContourFilter.h  CrossVertexConverter.cpp  CrossVertexConverter.h  CurvatureDerivative.cpp  CurvatureDerivative.h  Gradient.cpp  Gradient.h  InputParser.h  ProjectionType.h  Properties.h  PropertiesFileReader.h  RaycastHelper.cpp  RaycastHelper.h  SVGCreator.h  Tools.cpp  Tools.h
SynDraw/src/ViewGraph/: ContourNode.cpp  ContourNode.h  EdgeContourNode.cpp  EdgeContourNode.h  FaceContourNode.cpp  FaceContourNode.h  VertexNode.cpp  VertexNode.h  ViewGraph.cpp  ViewGraph.h
Tutorial/: .gitignore  1_generate.py  2_pack.py  3_train.py  4_test.py  NormalNet.py  README.md  clean.sh  doall.sh  generation_alt.sh  hstack.py  init.sh  template.properties
svg_tools/: .gitignore  README.md  svg_parser.py  svg_png_compose.py  svg_rasterizer.py  svg_resampler.py
svg_tools/scripts/: noise.sh
test/: .gitignore  requirements.txt  test.py  test.template
